--- a/web03Tablas.html
+++ b/web03Tablas.html
@@ -7,6 +7,16 @@
     <title>Ejemplo Tablas</title>
 </head>
 <body>
-  hola mundo  fichero para subir  dfg
+    <table border="1">
+        <thead>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Edad</th>
+        </thead>
+        <tbody>
+            <th>Alejandro</th>
+            <th>Alejandro@hotmail.com</th>
+            <th>26</th>
+        </tbody>
 </body>
 </html>
