--- a/practicaLunes.html
+++ b/practicaLunes.html
@@ -59,5 +59,6 @@
             <b>Lenguaje</b> de <i>Microsoft</i> 
         </dd>
     </dl>
+    <b><i>contenido cursiva negrita</i></b>
 </body>
 </html>
