--- a/practicaLunes.html
+++ b/practicaLunes.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica del día 11 de Octubre del 2021</title>
+    <link href="css/stilo.css" rel="stylesheet"/>
 </head>
 <body>
     <h3>Empezamos realizando una tabla</h3>
-    <table border="1">
+    <table border="1" class="tablalocura">
         <thead>
             <th>LENGUAJE</th>
             <th>DESCRIPCION</th>
